--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
         .card-content {
             padding: 0.75rem;
         }
+        .progress {
+            height: 30px;
+            background: #EDEDED;
+            position: absolute;
+            width: 200px;
+            margin-top: 0.75rem;
+            border-radius: 4px;
+            box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.5);
+        }
+        #myBar {
+            position: absolute;
+            width: 50%;
+            height: 30px;
+            background-color: #11998E;
+            }
     </style>
     <title>Hello Python from Electron!</title>
     <script>
@@ -71,7 +86,10 @@
             </div>
         </div>
         <div class="column has-text-centered">
-
+                <div class="progress">
+                <div id="myBar"></div>
+                </div>
+        </div>
         </div>
 </body>
 
