--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./html_assets/styles/bulma.min.css">
     <style>
         .custom-title {
-            font-family: "Ubuntu"
+            font-family: "Ubuntu";
+            font-size: 30px;
+            font-weight: bold;
         }
 
         .custom-button {
@@ -26,10 +28,20 @@
         .card {
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             border-radius: 4px;
+            margin: 3rem;
         }
 
         .card-content {
             padding: 0.75rem;
+        }
+        .card-content h3 span {
+            font-family: Questrial;
+            font-weight: normal;
+        }
+        header h3 {
+            font-family: Ubuntu;
+            font-weight: bold;
+            font-size: 24px;
         }
         .progress {
             height: 30px;
@@ -39,6 +51,7 @@
             margin-top: 0.75rem;
             border-radius: 4px;
             box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.5);
+            left: 917px;
         }
         #myBar {
             position: absolute;
@@ -86,6 +99,35 @@
             </div>
         </div>
         <div class="column has-text-centered">
+                <div class="card has-text-centered">
+                        <header class="card-header-title is-centered">
+                            <h3>Status</h3>
+                        </header>
+                        <div class="card-content">
+                            <h3 class="custom-title">
+                                <b>Accuracy:</b><span>90.2%</span>
+                            </h3>
+                            <h3 class="custom-title">
+                                    <b>Training ETA:</b><span>10sec/EP</span>
+                                </h3>
+                                <h3 class="custom-title">
+                                        <b>Loss:</b><span>13.3%</span>
+                                    </h3>
+                        </div>
+                    </div>
+                <div class="card has-text-centered">
+                        <div class="card-content">
+                                <header class="card-header-title is-centered">
+                                        <h3>Prediction</h3>
+                                    </header>
+                            <h3 class="custom-title">
+                                <b>Status:</b><span>Success</span>
+                            </h3>
+                            <h3 class="custom-title">
+                                    <b>ETA:</b><span>98MS</span>
+                                </h3>
+                        </div>
+                    </div>
                 <div class="progress">
                 <div id="myBar"></div>
                 </div>
